feat: update mocha

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "chai": "~3.5.0",
-    "mocha": "~3.3.0",
+    "mocha": "^9.0.1",
     "sinon": "~2.1.0",
     "sinon-chai": "~2.10.0"
   },
@@ -31,5 +31,8 @@
     "amazon",
     "cloudwatchappender"
   ],
-  "license": {"type": "MIT", "url": "https://github.com/camitz/aws-cloudwatch-statsd-backend/blob/master/LICENSE.md"}
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/camitz/aws-cloudwatch-statsd-backend/blob/master/LICENSE.md"
+  }
 }
